# tda-backend

./: .env  .gitignore  Cargo.toml  Dockerfile  rustfmt.toml
.github/workflows/: github-actions.yml
bindings/: .npmignore  AuthCallbackTdaQuery.ts  package-lock.json  package.json  tsconfig.json  vite.config.js
src/: lib.rs  main.rs  router.rs  server.rs  td_client.rs
src/database_client/: mod.rs
src/database_client/models/: mod.rs
src/firebase_client/: auth.rs  mod.rs
src/handlers/: auth_callback_tda.rs  auth_refresh_token.rs  auth_sign_in_with_email_password.rs  auth_sign_up_with_email_password.rs  get_accounts.rs  get_authorization_url.rs  mod.rs
src/handlers/providers/: mod.rs
src/handlers/providers/tda/: get_accounts.rs  get_orders.rs  mod.rs  refresh_token.rs
src/handlers/providers/tda/auth/: callback.rs  get_authorization_url.rs  mod.rs
src/handlers/providers/tradetracker/auth/: mod.rs  refresh_token.rs  sign_in.rs  sign_out.rs  sign_up.rs
src/middleware/: cloudflare.rs  jwt.rs  mod.rs
src/tda_client/: accounts.rs  auth.rs  mod.rs
src/utils/: cookie.rs  get_base_url.rs  mod.rs
