[package]
name = "tda-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1" }
axum = { version = "0.6", features = ["json", "http2", "query"] }
axum-extra = { version = "0.7", features = [
    "cookie",
    "cookie-private",
    "cookie-signed",
    "cookie-key-expansion",
] }
axum-macros = { version = "0.3" }
axum-server = { version = "0.4", features = ["tls-rustls"] }
axum-test = { version = "7.0" }
cookie = { version = "0.17", features = ["secure", "percent-encode"] }
dotenv = { version = "0.15" }
env_logger = { version = "0.10.0" }
hyper = { version = "0.14", features = ["full"] }
log = { version = "0.4.17" }
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = { version = "0.2" }
reqwest-retry = { version = "0.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
task-local-extensions = { version = "0.1" }
tokio = { version = "1.26", features = ["full"] }
tower = { version = "0.4" }
url = { version = "2.3" }
